Added email and name to signatures